<resources>
    <string name="app_name">PokeNews</string>
    <string name="no_internet">No internet connected.</string>
    <string name="no_news">No news found.</string>

    <string name="settings_topic_label">Topic</string>
    <string name="settings_topic_key" translatable="false">news_topic</string>
    <string name="settings_topic_default" translatable="false">android</string>

    <string name="settings_start_date_label">Start Date</string>
    <string name="settings_start_date_key" translatable="false">start_date</string>
    <string name="settings_start_date_default" translatable="false">2015-01-01</string>

    <string name="settings_end_date_label">End Date</string>
    <string name="settings_end_date_key" translatable="false">end_date</string>
    <string name="settings_end_date_default" translatable="false">2017-12-01</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_oldest_value</string>
    
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
</resources>
