<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="News Settings">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_topic_default"
        android:inputType="textCapWords"
        android:key="@string/settings_topic_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_topic_label" />

    <com.example.android.pokenews.DateSelection
        android:defaultValue="@string/settings_start_date_default"
        android:key="@string/settings_start_date_key"
        android:title="@string/settings_start_date_label" />

    <!--<com.example.android.pokenews.DateSelection-->
        <!--android:defaultValue="@string/settings_end_date_default"-->
        <!--android:key="@string/settings_end_date_key"-->
        <!--android:title="@string/settings_end_date_label" />-->

</PreferenceScreen>